agregue link en el header de index y empece productos celulares

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Celulares</a></li>
-                                <li><a class="dropdown-item" href="#">Computadoras</a></li>
-                                <li><a class="dropdown-item" href="#">Accesorios</a></li>
+                                <li><a class="dropdown-item" href="html/celulares.html">Celulares</a></li>
+                                <li><a class="dropdown-item" href="html/computadora.html">Computadoras</a></li>
+                                <li><a class="dropdown-item" href="html/accesorios.html">Accesorios</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
