--- a/html/celulares.html
+++ b/html/celulares.html
@@ -33,21 +33,21 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#sobreNosotros">Nosotros</a>
+                            <a class="nav-link" href="../#sobreNosotros">Nosotros</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Celulares</a></li>
-                                <li><a class="dropdown-item" href="#">Computadoras</a></li>
-                                <li><a class="dropdown-item" href="#">Accesorios</a></li>
+                                <li><a class="dropdown-item" href="celulares.html">Celulares</a></li>
+                                <li><a class="dropdown-item" href="computadora.html">Computadoras</a></li>
+                                <li><a class="dropdown-item" href="accesorios.html">Accesorios</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#reparaciones">Reparaciones</a>
+                            <a class="nav-link" href="../#reparaciones">Reparaciones</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" onclick="toggleCart()">
@@ -89,10 +89,10 @@
             <div class="footerlinks">
                 <div class="footerNavegacion">
                     <ul class="footerLista">
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="#sobreNosotros">Nosotros</a></li>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="../#sobreNosotros">Nosotros</a></li>
                         <li><a href="#">Productos</a></li>
-                        <li><a href="#">Reparaciones</a></li>
+                        <li><a href="../#reparaciones">Reparaciones</a></li>
                     </ul>
                 </div>
                 <div class="footerRedes">
